force-app/main/default/objects/TCP_DistributionEmailList__c/TCP_DistributionEmailList__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To capture distribution list of each region.</description>
    <label>TCP Distribution Email List</label>
</CustomObject>