force-app/main/default/objects/TCP_DistributionEmailList__c/fields/TCP_Commops_Delivery_Lists__c.field-meta.xml
<CustomField>
    <fullName>TCP_Commops_Delivery_Lists__c</fullName>
    <description>To capture multiple DL&apos;s that should be placed in TCP related emails CC address. Please separate email address with semicolon ;</description>
    <inlineHelpText>To capture multiple DL&apos;s that should be placed in TCP related emails CC address. Please separate email address with semicolon ;</inlineHelpText>
    <label>TCP Commops Delivery Lists</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>