force-app/main/default/objects/TCP_DistributionEmailList__c/fields/TCP_Region__c.field-meta.xml
<CustomField>
    <fullName>TCP_Region__c</fullName>
    <description>Enter values in similar format as Sales Area&apos;s Sales Org</description>
    <inlineHelpText>Enter values in similar format as Sales Area&apos;s Sales Org</inlineHelpText>
    <label>TCP Region</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>