force-app/main/default/objects/TCP_DistributionEmailList__c/fields/TCP_Region_Commops_Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>TCP_Region_Commops_Distribution_List__c</fullName>
    <description>This field captures each region&apos;s commops distribution list.</description>
    <inlineHelpText>This field captures each region&apos;s commops distribution list.</inlineHelpText>
    <label>TCP Region Commops Distribution List</label>
    <type>Email</type>
</CustomField>